// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Default story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary button--brand"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> Destructive story renders snapshot 1`] = `
<button
  class="button button--lg button--primary button--error"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> DestructiveLeftIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--primary button--error"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> FullWidth story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary button--brand button--full-width"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> IconButtonDisabled story renders snapshot 1`] = `
<button
  class="button button--lg button--icon button--brand button--disabled"
  disabled=""
  tabindex="-1"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> IconButtonIconOnly story renders snapshot 1`] = `
<button
  class="button button--lg button--icon button--brand"
  type="button"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      go back
    </title>
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
</button>
`;

exports[`<Button /> IconButtonIconOnlySmall story renders snapshot 1`] = `
<button
  class="button button--sm button--icon button--brand"
  type="button"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      go back
    </title>
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
</button>
`;

exports[`<Button /> IconButtonLeftIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--icon button--brand"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> IconButtonLeftIconSmall story renders snapshot 1`] = `
<button
  class="button button--sm button--icon button--brand"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> IconButtonRightIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--icon button--brand"
  type="button"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</button>
`;

exports[`<Button /> IconButtonRightIconSmall story renders snapshot 1`] = `
<button
  class="button button--sm button--icon button--brand"
  type="button"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</button>
`;

exports[`<Button /> IconError story renders snapshot 1`] = `
<button
  class="button button--lg button--icon button--error"
  type="button"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</button>
`;

exports[`<Button /> IconNeutral story renders snapshot 1`] = `
<button
  class="button button--lg button--icon button--neutral"
  type="button"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</button>
`;

exports[`<Button /> IconSuccess story renders snapshot 1`] = `
<button
  class="button button--lg button--icon button--success"
  type="button"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</button>
`;

exports[`<Button /> IconWarning story renders snapshot 1`] = `
<button
  class="button button--lg button--icon button--warning"
  type="button"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</button>
`;

exports[`<Button /> Loading story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary button--brand button--disabled eds-is-loading"
  disabled=""
  tabindex="-1"
  type="button"
>
  <div
    aria-busy="true"
    aria-label="loading"
    class="loading-indicator eds-is-loading"
    data-testid="oval-loading"
    role="status"
  >
    <svg
      data-testid="oval-svg"
      height="24"
      stroke="transparent"
      viewBox="-20 -20 42 42"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fill-rule="evenodd"
      >
        <g
          data-testid="oval-secondary-group"
          stroke-width="2"
          transform="translate(1 1)"
        >
          <circle
            cx="0"
            cy="0"
            r="20"
            stroke="transparent"
            stroke-opacity=".5"
            stroke-width="2"
          />
          <path
            d="M20 0c0-9.94-8.06-20-20-20"
          >
            <animatetransform
              attributeName="transform"
              dur="1s"
              from="0 0 0"
              repeatCount="indefinite"
              to="360 0 0"
              type="rotate"
            />
          </path>
        </g>
      </g>
    </svg>
  </div>
  Button
</button>
`;

exports[`<Button /> Primary story renders snapshot 1`] = `
<button
  class="button button--lg button--primary button--brand"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> PrimaryDisabled story renders snapshot 1`] = `
<button
  class="button button--lg button--primary button--brand button--disabled"
  disabled=""
  tabindex="-1"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> PrimaryLeftIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--primary button--brand"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> PrimaryMedium story renders snapshot 1`] = `
<button
  class="button button--md button--primary button--brand"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> PrimaryRightIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--primary button--brand"
  type="button"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</button>
`;

exports[`<Button /> PrimarySmall story renders snapshot 1`] = `
<button
  class="button button--sm button--primary button--brand"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> SecondaryDisabled story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary button--brand button--disabled"
  disabled=""
  tabindex="-1"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> SecondaryError story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary button--error"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> SecondaryLeftIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary button--brand"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> SecondaryMedium story renders snapshot 1`] = `
<button
  class="button button--md button--secondary button--brand"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> SecondaryRightIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary button--brand"
  type="button"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</button>
`;

exports[`<Button /> SecondarySmall story renders snapshot 1`] = `
<button
  class="button button--sm button--secondary button--brand"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> SecondarySuccess story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary button--success"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> SecondaryWarning story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary button--warning"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> Tertiary story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary button--neutral"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> TertiaryDisabled story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary button--neutral button--disabled"
  disabled=""
  tabindex="-1"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> TertiaryLeftIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary button--neutral"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> TertiaryMedium story renders snapshot 1`] = `
<button
  class="button button--md button--secondary button--neutral"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> TertiaryRightIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary button--neutral"
  type="button"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</button>
`;

exports[`<Button /> TertiarySmall story renders snapshot 1`] = `
<button
  class="button button--sm button--secondary button--neutral"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> passes class names down properly 1`] = `
<button
  class="button button--lg button--secondary button--brand exampleClassName"
  data-testid="example-class-name"
  type="button"
>
  Click
</button>
`;

exports[`<Button /> passes test ids down properly 1`] = `
<button
  class="button button--lg button--secondary button--brand"
  data-testid="example-test-id"
  type="button"
>
  Click
</button>
`;
